syntax = "proto3";

package register;

option go_package = "./proto;register";

service Register {
	rpc SendSms(CallRequest) returns (CallResponse) {};
	rpc Register(RegRequest) returns (CallResponse) {};
}

message CallRequest {
	string phone = 1;
	string  capCode = 2;
	string  uuid= 3;
}

message CallResponse {
	string	errno = 1;
	string  errmsg = 2;
}
message RegRequest{
	string mobile = 1;
	string password = 2;
	string smsCode = 3;
}
